--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<html>
+<head>
+    <title>Tushar Vaja</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 <body>
     <h1>Tushar Vaja</h1>
+    <div class="card">
+        <img src="hike.jpg" alt="Tushar" style="width:100%">
+        <h1>Tushar Vaja</h1>
+        <p class="title">CEO & Founder, Example</p>
+        <p>Harvard University</p>
+        <a href="#"><i class="fa fa-dribbble"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <p><button>Contact</button></p>
+    </div>
 </body>
+</html>
