--- a/index.html
+++ b/index.html
@@ -42,18 +42,20 @@
     </style>
 </head>
 <body>
-    <h1>Tushar Vaja</h1>
     <div class="card">
         <img src="hike.jpg" alt="Tushar" style="width:100%">
         <h1>Tushar Vaja</h1>
         <p class="title">CEO & Founder, Example</p>
         <p>Harvard University</p>
-        <a href="#"><i class="fa fa-dribbble"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-facebook"></i></a>
+        <div style="margin: 24px 0;">
+            <a href="#"><i class="fa fa-dribbble"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+        </div>
         <p><button>Contact</button></p>
     </div>
+
 </body>
 </html>
 
