--- a/Contact.html
+++ b/Contact.html
@@ -1,11 +1,10 @@
+
 <html>
 <head>
     <title>Tushar Vaja</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
     <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
-
-
 
     <style>
         .card {
@@ -63,7 +62,7 @@
                         <li><a href="#" data-toggle="modal" data-target="#experience" class="w3ls-hover"><span data-letters="Experience">Experience </span></a></li>
                         <li><a href="#" data-toggle="modal" data-target="#education" class="w3ls-hover"><span data-letters="Education">Education </span></a></li>
                         <li><a href="#" data-toggle="modal" data-target="#work" class="w3ls-hover"><span data-letters="Work">Work</span></a></li>
-                        <li><a href="Contact.html" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact </span></a></li>
+                        <li><a href="contact.html" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact </span></a></li>
                         <li><a class="w3ls-icon" href="#"><span class="glyphicon glyphicon-save"></span></a></li>
                     </ul>
                     <div class="clearfix"> </div>
@@ -71,6 +70,20 @@
             </div>
         </div>
     </div>
+    <br /><br /><br />
+    <div class="card">
+        <img src="hike.jpg" alt="Tushar" style="width:100%">
+        <h1>Tushar Vaja</h1>
+        <p class="title">CEO & Founder</p>
+        <div style="margin: 24px 0;">
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+        </div>
+        <p><button>Contact</button></p>
+        
+    </div>
+
 </body>
 </html>
 
