--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <div class="menu">
                     <ul class="nav navbar">
-                        <li><a href="index.html" class="w3ls-hover"><span data-letters="Home">Home</span></a></li>
+                        <li><a href="index.html" class="w3ls-hover"><span data-letters="Home">Home1</span></a></li>
                         <li><a href="#" data-toggle="modal" data-target="#about" class="w3ls-hover"><span data-letters="About">About </span></a></li>
                         <li><a href="#" data-toggle="modal" data-target="#skill" class="w3ls-hover"><span data-letters="Skills">Skills</span></a></li>
                         <li><a href="#" data-toggle="modal" data-target="#experience" class="w3ls-hover"><span data-letters="Experience">Experience </span></a></li>
