--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <div class="menu">
                     <ul class="nav navbar">
-                        <li><a href="index.html" class="w3ls-hover"><span data-letters="Home">Home1</span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#about" class="w3ls-hover"><span data-letters="About">About </span></a></li>
+                        <li><a href="index.html" class="w3ls-hover"><span data-letters="Home">Home</span></a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#about" class="w3ls-hover"><span data-letters="About">About</span></a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#education" class="w3ls-hover"><span data-letters="Education">Education</span></a></li>
                         <li><a href="#" data-toggle="modal" data-target="#skill" class="w3ls-hover"><span data-letters="Skills">Skills</span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#experience" class="w3ls-hover"><span data-letters="Experience">Experience </span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#education" class="w3ls-hover"><span data-letters="Education">Education </span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#work" class="w3ls-hover"><span data-letters="Work">Work</span></a></li>
-                        <li><a href="Contact.html" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact </span></a></li>
-                        <li><a class="w3ls-icon" href="#"><span class="glyphicon glyphicon-save"></span></a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#experience" class="w3ls-hover"><span data-letters="Experience">Experience</span></a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#projects" class="w3ls-hover"><span data-letters="Projects">Projects</span></a></li>
+                        <li><a href="Contact.html" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact</span></a></li
                     </ul>
                     <div class="clearfix"> </div>
                 </div>
