--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
                 <div class="menu">
                     <ul class="nav navbar">
                         <li><a href="index.html" class="w3ls-hover"><span data-letters="Home">Home</span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#about" class="w3ls-hover"><span data-letters="About">About</span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#education" class="w3ls-hover"><span data-letters="Education">Education</span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#skill" class="w3ls-hover"><span data-letters="Skills">Skills</span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#experience" class="w3ls-hover"><span data-letters="Experience">Experience</span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#projects" class="w3ls-hover"><span data-letters="Projects">Projects</span></a></li>
-                        <li><a href="Contact.html" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact</span></a></li
+                        <li><a href="about.html" class="w3ls-hover"><span data-letters="About">About</span></a></li>
+                        <li><a href="education.html" class="w3ls-hover"><span data-letters="Education">Education</span></a></li>
+                        <li><a href="skills.html" class="w3ls-hover"><span data-letters="Skills">Skills</span></a></li>
+                        <li><a href="experience.html" class="w3ls-hover"><span data-letters="Experience">Experience</span></a></li>
+                        <li><a href="projects.html" class="w3ls-hover"><span data-letters="Projects">Projects</span></a></li>
+                        <li><a href="blog.html" class="w3ls-hover"><span data-letters="Blog">Blog</span></a></li>
+                        <li><a href="contact.html" class="w3ls-hover"><span data-letters="Contact">Contact</span></a></li>
                     </ul>
                     <div class="clearfix"> </div>
                 </div>
