--- a/Contact.html
+++ b/Contact.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
     <title>Tushar Vaja</title>
@@ -57,13 +56,13 @@
                 <div class="menu">
                     <ul class="nav navbar">
                         <li><a href="index.html" class="w3ls-hover"><span data-letters="Home">Home</span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#about" class="w3ls-hover"><span data-letters="About">About </span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#skill" class="w3ls-hover"><span data-letters="Skills">Skills</span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#experience" class="w3ls-hover"><span data-letters="Experience">Experience </span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#education" class="w3ls-hover"><span data-letters="Education">Education </span></a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#work" class="w3ls-hover"><span data-letters="Work">Work</span></a></li>
-                        <li><a href="contact.html" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact </span></a></li>
-                        <li><a class="w3ls-icon" href="#"><span class="glyphicon glyphicon-save"></span></a></li>
+                        <li><a href="about.html" class="w3ls-hover"><span data-letters="About">About</span></a></li>
+                        <li><a href="education.html" class="w3ls-hover"><span data-letters="Education">Education</span></a></li>
+                        <li><a href="skills.html" class="w3ls-hover"><span data-letters="Skills">Skills</span></a></li>
+                        <li><a href="experience.html" class="w3ls-hover"><span data-letters="Experience">Experience</span></a></li>
+                        <li><a href="projects.html" class="w3ls-hover"><span data-letters="Projects">Projects</span></a></li>
+                        <li><a href="blog.html" class="w3ls-hover"><span data-letters="Blog">Blog</span></a></li>
+                        <li><a href="contact.html" class="w3ls-hover"><span data-letters="Contact">Contact</span></a></li>
                     </ul>
                     <div class="clearfix"> </div>
                 </div>
