--- a/Contact.html
+++ b/Contact.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Tushar Vaja</title>
+    <title>Tushar Vaja - Contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
     <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
