--- a/Contact.html
+++ b/Contact.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-    <title>Tushar Vaja - Contact</title>
+    <title>Tushar Vaja - Blog</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
     <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
-
+       
     <style>
         .card {
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -80,9 +80,7 @@
             <a href="#"><i class="fa fa-facebook"></i></a>
         </div>
         <p><button>Contact</button></p>
-        
     </div>
-
 </body>
 </html>
 
